--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,16 @@
   font-family: "Muli";
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  height: 100%;
   margin: 0;
   padding: 0;
+}
+
+.SlackInvitation {
+  height: 15%;
 }
